working on views exercises

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,12 +2,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome</title>
-    <th:block th:include="partials/styles.html :: styles"></th:block>
-    <!--Could also use the syntax to add a fragment to the document
-    <th:block th:replace="partials/styles.html :: styles"></th:block>-->
+    <title>Welcome!</title>
+    <!--    <th:block th:include="partials/styles.html :: styles"></th:block>-->
+    <!--Could also use the replace syntax to add a fragment to the document-->
+    <th:block th:replace="partials/styles.html :: styles"></th:block>
 </head>
 <body>
-<h1>This is the landing page!</h1>
+<nav th:replace="partials/navbar.html :: navbar"></nav>
+<h1 class="bg-primary">This is the landing page!</h1>
+<!--Hello, just to prove we are seeing the HTML doc-->
+<th:block th:include="partials/scripts.html :: scripts"></th:block>
 </body>
 </html>
