--- a/src/main/resources/templates/roll-dice.html
+++ b/src/main/resources/templates/roll-dice.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Title</title>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:include="partials/head :: header-links">
+    <title>Roll Dice</title>
 </head>
 <body>
+<nav th:replace="partials/navbar :: navbar"></nav>
+
+
+
+<h3>Roll Dice</h3>
+
+<!--  This form is mapped to "/" and gets handled with a PostMapping  -->
+<form action="/roll-dice" method="GET">
+    <!--   The form submits a dice parameter that gets used in PostMapping   -->
+    <input type="text" name="dice" id="dice">
+    <button>Roll</button>
+</form>
+
+
+<h1>Can you guess the dice roll?</h1>
+<ul>
+    <a th:href="@{/roll-dice/1}"><li>1</li></a>
+    <a th:href="@{/roll-dice/2}"><li>2</li></a>
+    <a th:href="@{/roll-dice/3}"><li>3</li></a>
+    <a th:href="@{/roll-dice/4}"><li>4</li></a>
+    <a th:href="@{/roll-dice/5}"><li>5</li></a>
+    <a th:href="@{/roll-dice/6}"><li>6</li></a>
+</ul>
+
+
 
 </body>
 </html>
