--- a/src/main/resources/templates/partials/scripts.html
+++ b/src/main/resources/templates/partials/scripts.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8"/>
+    <title></title>
 </head>
 <body>
 <th:block th:fragment="scripts">
