--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -8,11 +8,11 @@
 <nav th:replace= "partials/navbar :: navbar"></nav>
 
 <body>
-
+<!--todo need to finish the form here, come back to the lecture notes from david's walk-through-->
 <h1 th:text="${post.title}"></h1>
 <h3 th:text="${post.body}"></h3>
-<a th:href="@{'/posts/' + ${post.id} + '/edit'}">Edit Post</a>
-<form th:action="@{'/posts/' + ${post.id} + '/delete'}" th:method="POST">
+<a th:href="@{posts/${post.id}/edit}">Edit Post</a>
+<form th:action="@{/posts/delete/{id}(id= ${post.id})}" th:method="POST">
     <button>Delete</button>
 </form>
 
