able to show all posts

--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -21,6 +21,16 @@
             <p th:text="${post.title}"></p>
             <p th:text="${post.body}"></p>
             <hr>
+            <form th:action="@{/posts/edit/{id}(id=${post.id})}" method="get">
+                <button type="submit" name="edit">Edit</button>
+                <input hidden name="title" th:value="${post.title}">
+                <input hidden name="body" th:value="${post.body}">
+                <input hidden name="postId" th:value="${post.id}">
+            </form>
+            <form th:action="@{/posts/delete/{id}(id=${post.id})}" method="post">
+                <button type="submit" name="delete">Delete</button>
+                <input hidden name="postId" th:value="${post.id}">
+            </form>
         </div>
     </div>
 </div>
