--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Title</title>
-</head>
-<body>
-<!--todo please build out the edit form-->
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="partials/header :: head ('Viewing Post')" />
+<body class="main">
+<nav th:replace="partials/navbar :: navbar" />
+<header></header>
+<main class="container">
+    <div class="card offwhite-body">
+        <div class="card-content">
+            <h1>Edit post</h1>
+            <form method="post" th:action="@{/posts/save/edit/{id}(id=${post.id})}">
+                <input style="width: 25em"  class="card-title" th:value="${post.title}" name="title" />
+                <br>
+                <textarea style="width: 25em; height: 12em" th:text="${post.body}" class="i-like-paragraphs" name="body"></textarea>
+                <br>
+                <button type="submit" name="save">Save changes</button>
+            </form>
+            <br />
+        </div>
+    </div>
+</main>
+<footer th:replace="partials/footer :: footer"></footer>
 </body>
 </html>
