still getting white label errors for posts/edit

--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials/header :: head ('Viewing Post')" />
+<head th:include="partials/header :: head ('Viewing Post')"></head>
 <body class="main">
-<nav th:replace="partials/navbar :: navbar" />
+<nav th:replace="partials/navbar :: navbar"></nav>
 <header></header>
 <main class="container">
     <div class="card offwhite-body">
