--- a/src/main/resources/templates/ads/index.html
+++ b/src/main/resources/templates/ads/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials/header :: header ('Viewing All Ads')"></head>
+<head th:replace="partials/header.html :: header"></head>
 <body class="main">
-<nav th:replace="partials/navbar :: navbar"></nav>
+<nav th:replace="partials/navbar.html :: navbar"></nav>
 <header></header>
 <main class="container">
     <div class="card head-card">
@@ -29,6 +29,6 @@
         </div>
     </div>
 </main>
-<footer th:replace="partials/footer :: footer"></footer>
+<footer th:replace="partials/footer.html :: footer"></footer>
 </body>
 </html>
