--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -1,35 +1,18 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:replace="partials/header :: header ('Create New Post')"/>
-<body class="main">
-<nav th:replace="partials/navbar :: navbar" />
-<header></header>
-<main class="container">
-  <div class="card offwhite-body">
-    <div class="card-image">
-      <img src="../static/img/big-bar.png" th:src="@{/img/big-bar.png}" alt="colorful bar" />
-    </div>
-    <div class="card-content">
-      <form action="/posts/create" th:action="@{/posts/create}" method="post">
-        <div class="row">
-          <div class="input-field col s12">
-            <input id="title" name="title" type="text" class="validate" />
-            <label for="title">Title</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <textarea id="body" name="body" class="materialize-textarea"></textarea>
-            <label for="body">Body</label>
-          </div>
-        </div>
-        <button type="submit" value="submit" class="waves-effect waves-purple btn-small indigo accent-3">Submit</button>
-      </form>
-    </div>
-  </div>
-</main>
-<footer th:replace="partials/footer :: footer" />
-<script th:replace="partials/scripts :: script" />
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+  <meta charset="UTF-8"/>
+  <title>Title</title>
+</head>
+<body>
+<form action="/posts/create" th:action="@{/posts/create}" method="post" th:object="${post}">
+  Title:
+  <input th:field="*{title}" />
+  <br />
+  Description:
+  <input th:field="*{body}" />
+  <br />
+  <input type="submit" />
+</form>
 </body>
 </html>
